# routes/api.php
@@ -12,10 +12,15 @@ Route::post('/login', [AuthController::class, 'login']);
 Route::post('/request-otp-login', [AuthController::class, 'requestOtpLogin']);
 Route::post('/login-with-otp', [AuthController::class, 'loginWithOtp']);
 
+Route::post('/forgot-password', [AuthController::class, 'forgotPassword']);
+Route::post('/verify-forgot-password-otp', [AuthController::class, 'verifyForgotPasswordOtp']);
+
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
 
     Route::get('/profile', [ProfileController::class, 'profile']);
 
     Route::post('/change-password', [ProfileController::class, 'changePassword']);
+
+    Route::post('/reset-password', [AuthController::class, 'resetPassword']);
 });
